// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`max exclusive 1`] = `
Object {
  "_": "function validator(value) {
  return value < 5
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`max inclusive 1`] = `
Object {
  "_": "function validator(value) {
  return value <= 5
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`maxLength exclusive 1`] = `
Object {
  "_": "function validator(value) {
  return value && value.length < 5
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`maxLength inclusive 1`] = `
Object {
  "_": "function validator(value) {
  return value && value.length <= 5
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`min exclusive 1`] = `
Object {
  "_": "function validator(value) {
  return value > 5
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`min inclusive 1`] = `
Object {
  "_": "function validator(value) {
  return value >= 5
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`minLength exclusive 1`] = `
Object {
  "_": "function validator(value) {
  return value && value.length > 5
}",
  "explanations": Array [],
  "pure": true,
}
`;

exports[`minLength inclusive 1`] = `
Object {
  "_": "function validator(value) {
  return value && value.length >= 5
}",
  "explanations": Array [],
  "pure": true,
}
`;
